--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "dependencies": {
     "@polymer/polymer": "3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-element": "^2.2.1",
-    "@vaadin/vaadin-icons": "4.3.1",
-    "@vaadin/vaadin-grid": "5.7.5",
+    "lit-element": "2.4.0",
+    "@vaadin/vaadin-icons": "4.3.2",
+    "@vaadin/vaadin-grid": "5.7.11",
     "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "5.4.2",
-    "@vaadin/vaadin-core-shrinkwrap": "14.4.2",
-    "@vaadin/vaadin-upload": "4.4.0",
+    "@vaadin/vaadin-combo-box": "5.4.7",
+    "@vaadin/vaadin-core-shrinkwrap": "14.5.1",
+    "@vaadin/vaadin-upload": "4.4.1",
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-select": "2.4.0",
     "@vaadin/vaadin-app-layout": "2.2.0",
     "@vaadin/vaadin-item": "2.3.0",
-    "@vaadin/vaadin-notification": "1.6.0",
+    "@vaadin/vaadin-notification": "1.6.1",
     "@vaadin/vaadin-progress-bar": "1.3.0",
     "@vaadin/vaadin-date-time-picker": "1.4.0",
     "@vaadin/vaadin-ordered-layout": "1.4.0",
     "@vaadin/vaadin-login": "1.2.0",
     "@vaadin/vaadin-button": "2.4.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-text-field": "2.8.1",
-    "@vaadin/vaadin-menu-bar": "1.2.0",
+    "@vaadin/vaadin-text-field": "2.8.4",
+    "@vaadin/vaadin-menu-bar": "1.2.2",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@vaadin/vaadin-accordion": "1.2.0",
@@ -37,7 +37,8 @@
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
-    "@vaadin/vaadin-material-styles": "1.3.2"
+    "@vaadin/vaadin-material-styles": "1.3.2",
+    "@vaadin/vaadin-avatar": "1.0.4"
   },
   "devDependencies": {
     "webpack": "4.42.0",
@@ -48,32 +49,34 @@
     "compression-webpack-plugin": "4.0.1",
     "webpack-merge": "4.2.2",
     "raw-loader": "3.1.0",
-    "chokidar": "^3.4.0"
+    "chokidar": "^3.5.0",
+    "ts-loader": "8.0.12",
+    "typescript": "4.0.3"
   },
   "vaadin": {
     "dependencies": {
-      "lit-element": "^2.2.1",
+      "lit-element": "2.4.0",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-icons": "4.3.1",
-      "@vaadin/vaadin-grid": "5.7.5",
+      "@vaadin/vaadin-icons": "4.3.2",
+      "@vaadin/vaadin-grid": "5.7.11",
       "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-combo-box": "5.4.2",
-      "@vaadin/vaadin-core-shrinkwrap": "14.4.2",
-      "@vaadin/vaadin-upload": "4.4.0",
+      "@vaadin/vaadin-combo-box": "5.4.7",
+      "@vaadin/vaadin-core-shrinkwrap": "14.5.1",
+      "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
       "@vaadin/vaadin-app-layout": "2.2.0",
       "@vaadin/vaadin-item": "2.3.0",
-      "@vaadin/vaadin-notification": "1.6.0",
+      "@vaadin/vaadin-notification": "1.6.1",
       "@vaadin/vaadin-progress-bar": "1.3.0",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-text-field": "2.8.1",
-      "@vaadin/vaadin-menu-bar": "1.2.0",
+      "@vaadin/vaadin-text-field": "2.8.4",
+      "@vaadin/vaadin-menu-bar": "1.2.2",
       "@vaadin/vaadin-custom-field": "1.3.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
       "@vaadin/vaadin-accordion": "1.2.0",
@@ -87,7 +90,8 @@
       "@vaadin/vaadin-tabs": "3.2.0",
       "@vaadin/vaadin-radio-button": "1.5.1",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
-      "@vaadin/vaadin-material-styles": "1.3.2"
+      "@vaadin/vaadin-material-styles": "1.3.2",
+      "@vaadin/vaadin-avatar": "1.0.4"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -96,10 +100,12 @@
       "raw-loader": "3.1.0",
       "webpack-cli": "3.3.11",
       "webpack": "4.42.0",
-      "chokidar": "^3.4.0",
+      "chokidar": "^3.5.0",
       "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.11.0"
+      "webpack-dev-server": "3.11.0",
+      "ts-loader": "8.0.12",
+      "typescript": "4.0.3"
     },
-    "hash": "89c88b68d0081b8a8071c6943c6a25f30d18bed33dae9bafd7b0c2d4e52e2c06"
+    "hash": "22164629c01f38e62688880396e0f8aa71d2ff05c181b5b7ea8b508795ead1ba"
   }
 }
