--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.vaadin.erik</groupId>
     <artifactId>slidetab</artifactId>
-    <version>3.0.2-SNAPSHOT</version>
+    <version>3.0.2</version>
     <name>SlideTab</name>
     <description>A tab that when clicked slides out a panel</description>
 
