--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.vaadin.erik</groupId>
     <artifactId>slidetab</artifactId>
-    <version>3.0.2</version>
+    <version>3.0.3</version>
     <name>SlideTab</name>
     <description>A tab that when clicked slides out a panel</description>
 
@@ -109,6 +109,9 @@
                             <Vaadin-Package-Version>1</Vaadin-Package-Version>
                         </manifestEntries>
                     </archive>
+					<excludes>
+						<exclude>META-INF/VAADIN/config/flow-build-info.json</exclude>
+					</excludes>
                 </configuration>
             </plugin>
             <plugin>
