--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,16 @@
 					</checkModificationExcludes>
 				</configuration>
 			</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<inherited>true</inherited>
+					<configuration>
+						<doclint>none</doclint>
+						<additionalparam>-Xdoclint:none</additionalparam>
+						<failOnError>false</failOnError>
+					</configuration>
+				</plugin>
 
 		</plugins>
 	</build>
