--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.rtlscloud.vaadin</groupId>
 	<artifactId>slidetab</artifactId>
-	<version>3.0.4-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>SlideTab</name>
 	<description>A tab that when clicked slides out a panel</description>
 
@@ -20,8 +22,8 @@
 		<connection>scm:git:https://github.com/iot-invent/vaadin-slidetab.git</connection>
 		<url>https://github.com/iot-invent/vaadin-slidetab</url>
 		<developerConnection>scm:git:https://github.com/iot-invent/vaadin-slidetab.git</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	<licenses>
 		<license>
 			<name>Apache 2</name>
@@ -157,16 +159,16 @@
 					</checkModificationExcludes>
 				</configuration>
 			</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<inherited>true</inherited>
-					<configuration>
-						<doclint>none</doclint>
-						<additionalparam>-Xdoclint:none</additionalparam>
-						<failOnError>false</failOnError>
-					</configuration>
-				</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<inherited>true</inherited>
+				<configuration>
+					<doclint>none</doclint>
+					<additionalparam>-Xdoclint:none</additionalparam>
+					<failOnError>false</failOnError>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
